modify ProductServiceImpl